k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
spec:
  type: NodePort
  selector:
    app: backend-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
